<resources>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>

  <!-- Main Activity -->
  <string name="app_name">PopularMovies</string>

  <!-- Movie Grid -->
  <string name="movie_grid_menu_sort_by_most_popular">Sort by Most Popular</string>
  <string name="movie_grid_menu_sort_by_top_rated">Sort by Top Rated</string>
  <string name="movie_grid_menu_favorites">Favorites</string>

  <!-- Movie Detail -->
  <string name="movie_detail_label">Movie Detail</string>
  <string name="movie_detail_default_name" translatable="false">Movie Name</string>
  <string name="movie_detail_default_duration" translatable="false">Duration</string>
  <string name="movie_detail_default_release_date" translatable="false">Release Date</string>
  <string name="movie_detail_default_user_rating" translatable="false">User Rating</string>
  <string name="movie_detail_default_plot_synopsis" translatable="false">Plot Synopsis</string>
  <string name="movie_detail_favorite_button_save" translatable="false">Save to Favorites</string>
  <string name="movie_detail_favorite_button_remove" translatable="false">Remove from Favorites</string>
  <string name="movie_detail_movie_poster_content_description" translatable="false">Movie Poster</string>
  <string name="movie_detail_trailer_header" translatable="true">Trailers:</string>
  <string name="movie_detail_reviews_header" translatable="true">Reviews:</string>
  <string name="movie_detail_trailer_default_trailer_name" translatable="false">Trailer Name</string>
  <string name="movie_detail_trailer_default_author_name" translatable="false">Author Name</string>
  <string name="movie_detail_trailer_default_content" translatable="false">Content</string>
</resources>
