<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingTop="@dimen/movie_detail_fragment_trailer_item_horizontal_padding"
              android:paddingBottom="@dimen/movie_detail_fragment_trailer_item_horizontal_padding">

  <TextView
    android:id="@+id/textview_review_header"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/movie_detail_fragment_horizontal_margin"
    android:layout_marginStart="@dimen/movie_detail_fragment_horizontal_margin"
    android:textSize="@dimen/movie_detail_fragment_trailer_header_text_size"
    android:text="@string/movie_detail_reviews_header"/>

  <TextView
    android:id="@+id/textview_review_author"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/movie_detail_fragment_horizontal_margin"
    android:layout_marginLeft="@dimen/movie_detail_fragment_horizontal_margin"
    android:layout_marginStart="@dimen/movie_detail_fragment_horizontal_margin"
    android:textStyle="bold"
    android:textSize="@dimen/movie_detail_fragment_review_author_size"
    android:text="@string/movie_detail_trailer_default_author_name"/>

  <TextView
    android:id="@+id/textview_review"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/movie_detail_fragment_horizontal_margin"
    android:layout_marginStart="@dimen/movie_detail_fragment_horizontal_margin"
    android:layout_marginRight="@dimen/movie_detail_fragment_horizontal_margin"
    android:layout_marginEnd="@dimen/movie_detail_fragment_horizontal_margin"
    android:textSize="@dimen/movie_detail_fragment_review_content_size"
    android:text="@string/movie_detail_trailer_default_content"/>

</LinearLayout>